tests/thymeleaf-tests-spring6/src/test/resources/templateengine/springintegration/errors/errors37.thtest
%EXTENDS ../springintegration.common
# ------------------------------------------------------------
%CONTEXT

bean = new org.thymeleaf.templateengine.springintegration.model.FormBean08()
bean.somethings['some.key1'] = 'some value'
bean.somethings['some.key2'] = 'some other value'
bean.normal = 'a normal value'

bindingError01 = #{ 'binding' : 'bean',\
                    'field' : 'somethings[\\'some.key1\\']',\
                    'message' : 'This value is boring'}
bindingError02 = #{ 'binding' : 'bean',\
                    'field' : 'somethings[\\'some.key2\\']',\
                    'message' : 'This value is boring too'}
bindingError03 = #{ 'binding' : 'bean',\
                    'field' : 'normal',\
                    'message' : 'This value is normal. But boring'}

bindingErrors = { bindingError01, bindingError02, bindingError03 }

# ------------------------------------------------------------
%INPUT
<form th:object="${bean}" th:action="'/url'">
   <div th:errors="*{somethings['some.key1']}"></div>
   <div th:errors="*{somethings['some.key2']}"></div>
   <input type="text" th:field="*{normal}">
   <input type="text" th:field="*{somethings['some.key1']}">
   <input type="text" th:field="*{somethings['some.key2']}">
</form>
# ------------------------------------------------------------
%OUTPUT
<form action="/url">
   <div>This value is boring</div>
   <div>This value is boring too</div>
   <input type="text" id="normal" name="normal" value="a normal value">
   <input type="text" id="somethings'some.key1'" name="somethings['some.key1']" value="some value">
   <input type="text" id="somethings'some.key2'" name="somethings['some.key2']" value="some other value">
</form>
